--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <!-- 区分项目名称，防止默认重名 -->    
     <context-param>    
         <param-name>webAppRootKey</param-name>    
-        <param-value>maven.example.root</param-value>    
+        <param-value>studyDemo.root</param-value>    
     </context-param>    
     
     <!-- Spring的log4j监听器 -->    
@@ -14,7 +14,7 @@
     </listener>    
     <context-param>  
     		<param-name>contextConfigLocation</param-name>  
-   			 <param-value>/WEB-INF/applicationContext.xml</param-value>  
+   			 <param-value>applicationContext.xml</param-value>  
 </context-param>
     <listener>
   <listener-class>com.study.spring.listener.SpringContextLoaderListener</listener-class>
@@ -37,6 +37,18 @@
         <url-pattern>/*</url-pattern>    
     </filter-mapping>    
     
+    <!-- 日志配置 -->
+     <context-param>  
+        <param-name>log4jConfigLocation</param-name>  
+        <param-value>log4j.properties</param-value>  
+    </context-param>  
+    <context-param>  
+        <param-name>log4jRefreshInterval</param-name>  
+        <param-value>3000</param-value>  
+    </context-param>  
+    <listener>  
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
+    </listener> 
     <!-- Spring view分发器 -->    
     <servlet>    
         <servlet-name>contextConfig</servlet-name>    
